# Algorithm

./: .gitignore  CMakeLists.txt  CMakeListsOld.txt  README.md
lib/_misc/avk-0.98.1/: CHANGELOG.md
lib/imgui-docking-1.89.9/examples/example_glfw_vulkan/: CMakeLists.txt
lib/physx-5.2.1/include/extensions/: PxDefaultAllocator.h
lib/physx-5.2.1/include/foundation/: PxPreprocessor.h
lib/physx-5.2.1/include/foundation/unix/sse2/: PxUnixSse2AoS.h
lib/physx-5.2.1/include/foundation/windows/: PxWindowsTrigConstants.h
lib/stb/: stb_image_write.h
run/shaders/test/: .frag  .vert  frag.spv  vert.spv
src/ethertia/: Ethertia.cpp  Ethertia.h
src/ethertia/command/: Command.h
src/ethertia/entity/: Entity.h
src/ethertia/imgui/: ImWindows.cpp  ImWindows.h  Imgui.cpp  Imgui.h
src/ethertia/init/: Settings.cpp  Settings.h
src/ethertia/lang/: Elytra.cpp
src/ethertia/lang/compiler/: CodeBuf.h
src/ethertia/lang/symbol/: Modifiers.h  SymbolInternalTypes.h  TypeSymbol.h
src/ethertia/render/: RenderEngine.cpp  RenderEngine.h  VertexData.cpp  VertexData.h  Window.cpp  Window.h
src/ethertia/render/renderer/: RendererGbuffers.cpp
src/ethertia/render/vkx/: vkx.cpp  vkx.h
src/ethertia/util/: BenchmarkTimer.cpp  BenchmarkTimer.h  BitmapImage.cpp  BitmapImage.h  Colors.h  Loader.cpp  Loader.h  Log.h  Strings.h
src/ethertia/world/: World.cpp
src/stdx/: stdx.h
src/vkx/: vkx.cpp  vkx.hpp
